change proto
