# app/api/docs/space/space.swagger.yaml
@@ -25,6 +25,26 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.TCreatePageLinkResp'
+    /page/createSelfPage:
+        post:
+            tags:
+                - 空间
+            summary: 创建自己页面
+            description: ' 当getMySpace不存在自己的页面时，调用该接口创建自己的页面'
+            operationId: SpaceService_CreateSelfPage
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.CreateSelfPageReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/.TCreateSelfPageResp'
     /page/createTmpPage:
         post:
             tags:
@@ -204,6 +224,23 @@ components:
                 page_type:
                     type: string
                     description: 页面类型
+        .CreateSelfPageReq:
+            required:
+                - title
+                - brief
+            type: object
+            properties:
+                title:
+                    type: string
+                    description: 页面标题
+                brief:
+                    type: string
+                    description: 页面描述
+        .CreateSelfPageResp:
+            type: object
+            properties:
+                page_id:
+                    type: string
         .CreateTmpPageReq:
             required:
                 - user_uuid
@@ -248,7 +285,9 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/.PageBrief'
-                    description: 我的空间下面的页面
+                    description: |-
+                        我的空间下面的页面
+                         逻辑：如果没有自己的主页面，则调用接口创建自己的页面
         .GetPageReq:
             type: object
             properties:
@@ -260,6 +299,8 @@ components:
                 page:
                     $ref: '#/components/schemas/.Page'
         .Link:
+            required:
+                - title
             type: object
             properties:
                 title:
@@ -279,6 +320,9 @@ components:
                         $ref: '#/components/schemas/.SubLink'
                     description: 子链接
         .Page:
+            required:
+                - title
+                - brief
             type: object
             properties:
                 page_id:
@@ -319,6 +363,9 @@ components:
                 admin_page_id:
                     type: string
         .PageBrief:
+            required:
+                - title
+                - brief
             type: object
             properties:
                 page_id:
@@ -408,6 +455,20 @@ components:
                     type: string
                 data:
                     $ref: '#/components/schemas/.CreatePageLinkResp'
+        .TCreateSelfPageResp:
+            required:
+                - code
+                - msg
+                - data
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                msg:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/.CreateSelfPageResp'
         .TCreateTmpPageResp:
             required:
                 - code
@@ -508,6 +569,8 @@ components:
                     $ref: '#/components/schemas/.UpdatePageResp'
         .UpdatePageReq:
             required:
+                - title
+                - brief
                 - mask
             type: object
             properties:
